Actions
Bug #9689
closedzfs range lock code should not be zpl-specific
Start date:
2018-07-31
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
The ZFS range locking code in zfs_rlock.c/h depends on ZPL-specific data structures, specifically znode_t. However, it's also used by the ZVOL code, which uses a "dummy" znode_t to pass to the range locking code.
We should clean this up so that the range locking code is generic and can be used equally by ZPL and ZVOL, and also can be used by future consumers that may need to run in userland (libzpool) as well as the kernel.
Updated by Electric Monk about 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 7931524763ef94dc16989451dddd206563d03bb4
commit 7931524763ef94dc16989451dddd206563d03bb4 Author: Matthew Ahrens <mahrens@delphix.com> Date: 2018-12-21T18:13:47.000Z 9689 zfs range lock code should not be zpl-specific Reviewed by: Serapheim Dimitropoulos <serapheim.dimitro@delphix.com> Reviewed by: George Wilson <george.wilson@delphix.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions